--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
-    "mochapack": "^1.0.0",
-    "node-sass": "^4.13.1",
+    "mochapack": "^1.1.15",
+    "sass": "^1.32.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.31.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
